--- a/package.json
+++ b/package.json
@@ -3,16 +3,30 @@
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
+  "dependencies": {
+    "@google-cloud/storage": "^2.0.3",
+    "dotenv": "^6.1.0",
+    "express": "^4.16.3",
+    "gif-frames": "^0.4.1",
+    "multer": "^1.4.0",
+    "multer-google-storage": "^1.2.1",
+    "node-sprite": "^0.1.2",
+    "pug": "^2.0.3",
+    "socket.io": "^2.1.1",
+    "spritesheet-js": "^1.2.6"
+  },
+  "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/JamieRez/valoria.git"
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "express": "^4.16.3",
-    "multer": "^1.3.1",
-    "pug": "^2.0.3",
-    "socket.io": "^2.1.1"
-  }
+  "bugs": {
+    "url": "https://github.com/JamieRez/valoria/issues"
+  },
+  "homepage": "https://github.com/JamieRez/valoria#readme"
 }
