Finished Scrolling. Working with google cloud now

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 GCLOUD_STORAGE_BUCKET=valoria
-GOOGLE_APPLICATION_CREDENTIALS=./Valoria-cf4a6bbac466.json
+GOOGLE_APPLICATION_CREDENTIALS=credentials/Valoria-cf4a6bbac466.json
