--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "pug": "^2.0.3",
     "socket.io": "^2.1.1",
   },
+  "engines": {
+    "node": "8.11.2"
+  },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
