--- a/package.json
+++ b/package.json
@@ -1,31 +1,31 @@
 {
-  "name": "valoria",
-  "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
-  "dependencies": {
-    "dotenv": "^6.1.0",
-    "express": "^4.16.3",
-    "multer": "^1.4.0",
-    "node-sprite": "^0.1.2",
-    "pug": "^2.0.3",
-    "socket.io": "^2.1.1",
-  },
-  "engines": {
-    "node": "8.11.2"
-  },
-  "devDependencies": {},
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/JamieRez/valoria.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/JamieRez/valoria/issues"
-  },
-  "homepage": "https://github.com/JamieRez/valoria#readme"
+	"name": "valoria",
+	"version": "1.0.0",
+	"description": "",
+	"main": "app.js",
+	"dependencies": {
+		"dotenv": "^6.1.0",
+		"express": "^4.16.3",
+		"multer": "^1.4.0",
+		"node-sprite": "^0.1.2",
+		"pug": "^2.0.3",
+		"socket.io": "^2.1.1"
+	},
+	"engines": {
+		"node": "8.11.2"
+	},
+	"devDependencies": {},
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/JamieRez/valoria.git"
+	},
+	"author": "",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/JamieRez/valoria/issues"
+	},
+	"homepage": "https://github.com/JamieRez/valoria#readme"
 }
