--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"description": "",
 	"main": "app.js",
 	"dependencies": {
+		"@google-cloud/storage": "^2.1.0",
 		"dotenv": "^6.1.0",
 		"express": "^4.16.3",
 		"multer": "^1.4.0",
@@ -17,7 +18,7 @@
 	"devDependencies": {},
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+		"start": "node app.js"
 	},
 	"repository": {
 		"type": "git",
