--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
 	"main": "app.js",
 	"dependencies": {
 		"@google-cloud/storage": "^2.1.0",
+		"body-parser": "^1.18.3",
 		"dotenv": "^6.1.0",
 		"express": "^4.16.3",
+		"mongoose": "^5.3.4",
 		"multer": "^1.4.0",
 		"node-sprite": "^0.1.2",
 		"pug": "^2.0.3",
