--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 GCLOUD_STORAGE_BUCKET=valoria
 GOOGLE_APPLICATION_CREDENTIALS=credentials/Valoria-cf4a6bbac466.json
+JWT_SECRET=THESUPERSECRETWITHINMUSTNEVEREVERBEKNOWN
