--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
 	"main": "app.js",
 	"dependencies": {
 		"@google-cloud/storage": "^2.1.0",
+		"bcrypt-nodejs": "0.0.3",
 		"body-parser": "^1.18.3",
+		"cookie-parser": "^1.4.3",
 		"dotenv": "^6.1.0",
 		"express": "^4.16.3",
+		"jsonwebtoken": "^8.3.0",
 		"mongoose": "^5.3.4",
 		"multer": "^1.4.0",
 		"node-sprite": "^0.1.2",
