--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
 		"multer": "^1.4.0",
 		"node-sprite": "^0.1.2",
 		"pug": "^2.0.3",
-		"socket.io": "^2.1.1"
+		"socket.io": "^2.1.1",
+		"xterm": "^3.8.0"
 	},
 	"engines": {
 		"node": "8.11.2"
