--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"mongoose": "^5.3.4",
 		"multer": "^1.4.0",
 		"node-sprite": "^0.1.2",
+		"peer": "^0.2.10",
 		"pug": "^2.0.3",
 		"socket.io": "^2.1.1",
 		"socket.io-cookie-parser": "^1.0.0",
